@@ -7,8 +7,13 @@ SQuirreL SQL Client Change Log
 
 Bug-Fixes:
 
+Oracle Plugin: Added ability to recognize "create package" and "create package body" statements.
+
 Syntax Plugin: Fixed memory leak which caused sessions not to be garbage 
 collected.
+
+1861402 (Informix catalog switching doesn't work correctly)
+
 
 2.6.3 (12/22/2007)
 =================
